<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_name"
        android:id="@+id/new_name_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:textColor="#000000"
        android:layout_alignParentLeft="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_ip"
        android:id="@+id/new_ip_label"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/new_name"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_name"
        android:inputType="textPersonName"
        android:layout_below="@+id/new_name_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_ip"
        android:inputType="number|text|numberDecimal"
        android:layout_below="@+id/new_ip_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_type"
        android:id="@+id/new_type_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="#000000"
        android:layout_below="@+id/new_ip" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_type"
        android:layout_below="@+id/new_type_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error"
        android:layout_below="@+id/new_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

</RelativeLayout>